--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -8,7 +8,6 @@
  */
  
  
-// Apply the java plugin to add support for Java
 apply plugin: 'java'
 
 
@@ -17,17 +16,19 @@ apply plugin: 'java'
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
-    mavenCentral()
-    
+        mavenCentral() 
+    	jcenter()
 }
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
+    compile 'com.google.code.gson:gson:2.2.4'
     compile 'org.slf4j:slf4j-api:1.7.21'
-    compile "org.json:json:20160212"
-
+    compile files('lib/json-20160810.jar')
+    compile 'org.json:json:20160810'
+    
+    
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
@@ -35,7 +36,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
+
 jar {
+	from configurations.compile.collect{
+								 zipTree it
+										}
   manifest {
     attributes(
       'Main-Class': 'client.ClientMain'
