--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -23,10 +23,14 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'org.json:json:20160810'
+    compile 'com.google.code.gson:gson:2.6.2'
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile files('lib/json-20160810.jar')
-    compile 'org.json:json:20160810'
+    compile files('lib/gson-2.6.2.jar')
+ 
+    
+    
     
     
     // Declare the dependency for your favourite test framework you want to use in your tests.
@@ -34,6 +38,10 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+  testCompile group: 'junit', name: 'junit-dep', version: '4.10'
+  testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+  testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.+'
 }
 
 
