--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -22,9 +22,11 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
+    compile 'org.json:json:20160810'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile files('lib/gson-2.6.2.jar')
     compile 'org.slf4j:slf4j-api:1.7.21'
 	compile files('lib/json-20160810.jar')
-    compile 'org.json:json:20160810'
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
